final edit