@@ -14,6 +14,7 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ReservationService {
@@ -43,7 +44,13 @@ public class ReservationService {
     }
 
     public List<ReservationResponse> getReservationsForUser(String username) {
-        List<Reservation> reservations = reservationRepository.findByMemberUsername(username);
-        return reservations.stream().map(res -> new ReservationResponse(res)).toList();
+        Member member = memberRepository.findById(username).orElseThrow(()->new ResponseStatusException(HttpStatus.NOT_FOUND,"User Not Found"));
+        List<ReservationResponse> reservations = member.getReservations().stream().map(r->new ReservationResponse(r)).toList();
+        return reservations;
+    }
+    public List<ReservationResponse> getReservations(){
+        List<Reservation> reservations = reservationRepository.findAll();
+        List<ReservationResponse> response = reservations.stream().map(res-> new ReservationResponse(res)).collect(Collectors.toList());
+        return response;
     }
 }
